<resources>
    <string name="app_name">Show Me Hills</string>
    <string name="preferences">Preferences</string>
    <string name="title_distance_preference">Max Distance (km)</string>
    <string name="summary_distance_preference">Furthest displayed hills</string>
    <string name="title_mindistance_preference">Min Distance (km)</string>
    <string name="summary_mindistance_preference">Nearest displayed hills</string>
    <string name="title_minheight_preference">Min Height (m)</string>
    <string name="summary_minheight_preference">Minimum height of displayed hills</string>
    <string name="title_textsize_preference">Text size</string>
    <string name="summary_textsize_preference" />
    <string name="title_showdist_preference">Show distance</string>
    <string name="summary_showdist_preference" />
    <string name="title_showdir_preference">Show bearing</string>
    <string name="summary_showdir_preference" />
    <string name="title_showalt_preference">Show height</string>
    <string name="summary_showalt_preference" />
    <string name="title_distunit_preference">Units</string>
    <string name="summary_distunit_preference">Kilometers or miles</string>
    <string name="title_compass_smoothing">Compass filter</string>
    <string name="summary_compass_smoothing">Number of readings averaged</string>
    <string name="dbname">hillsv12.db</string>
    <string name="dbpath">/data/data/com.showmehills/databases/</string>
    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="title_activity_maps">Map</string>
    <string name="height">Height</string>
    <string name="distance">Distance</string>
    <string name="title_useoldcam_preference">Use alternative camera settings (in case of black screen) - requires a restart before setting is effective</string>
    <string name="summary_useoldcam_preference" />
</resources>
