<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.showmehills.CameraPreviewSurface
        android:id="@+id/cps"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/app_name"
        />

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="200dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distbars"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/distancelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textColor="#ffffff"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true" />
            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:layout_toRightOf="@+id/distancelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/distanceSeekBar"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distbars"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/heightlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="#ffffff"
                android:gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true" />

            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:layout_toRightOf="@+id/heightlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/heightSeekBar"
                android:gravity="center_vertical"
                android:adjustViewBounds="false" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Direction:"
        android:id="@+id/dirText"
        android:layout_above="@+id/fovText"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="FOV:"
        android:id="@+id/fovText"
        android:layout_above="@+id/locText"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Location:"
        android:id="@+id/locText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/rightarrowimage"
        android:layout_alignParentStart="true"
        android:alpha="0.5"
        android:src="@drawable/arrow_facing_right"
        android:visibility="invisible"
        android:layout_alignParentRight="false" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/leftarrowimage"
        android:alpha="0.5"
        android:src="@drawable/arrow_facing_left"
        android:visibility="invisible" />
</RelativeLayout>
